# kavsamba-module

config/: mkinstalldirs
sources/: Makefile.in  acconfig.h  configure  configure.in
sources/include/: kavsamba_common.h  kavsamba_helpers.h  kavsamba_options.h.in
sources/samba_includes/2.2.x/source/include/: config.h  includes.h
sources/samba_includes/2.2.x/source/nsswitch/: sys_nss.h
sources/samba_includes/3.0.0/source/include/: build_env.h  config.h  includes.h  proto.h
sources/samba_includes/3.0.0/source/nsswitch/: winbind_nss.h  winbindd_proto.h
sources/samba_includes/3.0.11/source/include/: build_env.h  config.h  includes.h  proto.h
sources/samba_includes/3.0.11/source/nsswitch/: winbind_nss.h
sources/samba_includes/3.0.2/source/include/: build_env.h  config.h  includes.h  proto.h
sources/samba_includes/3.0.20/source/include/: build_env.h  config.h  includes.h  proto.h  version.h
sources/samba_includes/3.0.20/source/nsswitch/: winbind_nss.h
sources/samba_includes/3.0.20a/source/include/: config.h  includes.h  proto.h  sysquotas.h  version.h
sources/samba_includes/3.0.4/source/include/: build_env.h  proto.h  version.h
sources/src/: Makefile.in  kavsamba_common.c  kavsamba_helpers.c  kavsamba_wrap-2.2.x.c  kavsamba_wrap-3.x.c
