## $Id: configure.in,v 1.14 2005/10/06 13:03:08 automake Exp $ 

dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/kavsamba_wrap-2.2.x.c)
AC_CONFIG_AUX_DIR(../config)
AC_CONFIG_HEADER(include/kavsamba_options.h)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_RANLIB
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

dnl Checks for header files.
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strstr snprintf vsnprintf)

samba_src="./samba_includes/includes"
SAMBA_INCLUDES="-I\$(top_srcdir)/$samba_src/source -I\$(top_srcdir)/$samba_src/source/popt \
	-I\$(top_srcdir)/$samba_src/source/include \
	-I\$(top_srcdir)/$samba_src/source/ubiqx -I\$(top_srcdir)/$samba_src/source/smbwrapper"


INCLUDES="-I\$(top_srcdir)/include"
INCLUDES="$INCLUDES $SAMBA_INCLUDES"
KAVSAMBA_LIB_NAME_2X="kavsamba5-smb-2.2.x.so"
KAVSAMBA_3_0_0_MODULE_NAME="kavsamba5-smb-3.0.0"
KAVSAMBA_3_0_2_MODULE_NAME="kavsamba5-smb-3.0.2"
KAVSAMBA_3_0_4_MODULE_NAME="kavsamba5-smb-3.0.4"
KAVSAMBA_3_0_11_MODULE_NAME="kavsamba5-smb-3.0.11"
KAVSAMBA_3_0_20_MODULE_NAME="kavsamba5-smb-3.0.20"
KAVSAMBA_3_0_20a_MODULE_NAME="kavsamba5-smb-3.0.20a"

KAVSAMBA_LIB_NAME_3_0_0="$KAVSAMBA_3_0_0_MODULE_NAME.so"
KAVSAMBA_LIB_NAME_3_0_2="$KAVSAMBA_3_0_2_MODULE_NAME.so"
KAVSAMBA_LIB_NAME_3_0_4="$KAVSAMBA_3_0_4_MODULE_NAME.so"
KAVSAMBA_LIB_NAME_3_0_11="$KAVSAMBA_3_0_11_MODULE_NAME.so"
KAVSAMBA_LIB_NAME_3_0_20="$KAVSAMBA_3_0_20_MODULE_NAME.so"
KAVSAMBA_LIB_NAME_3_0_20a="$KAVSAMBA_3_0_20a_MODULE_NAME.so"




DYNFLAGS="-shared -Wl,--export-dynamic -Wl,-soname,\$@"

case "$host_os" in
		*linux*)
		DYNFLAGS="-shared -Wl,--export-dynamic -Wl,-soname=\$@"
		CFLAGS="-O3 -Wall -fPIC"
		;;
		*freebsd*)
		DYNFLAGS="-shared -Wl,--export-dynamic -Wl,-soname,\$@"
		CFLAGS="-O3 -Wall -fPIC -DPIC"
		;;
		*openbsd*)
		DYNFLAGS="-shared -Wl,-Bdynamic -Wl,-soname,\$@"
		CFLAGS="-O3 -Wall -fPIC"
		;;
		*solaris*)
		DYNFLAGS="-G -h \$@"
		CFLAGS="-O3 -Wall -fPIC"
		;;

		
esac

AC_SUBST(DYNFLAGS)
AC_SUBST(INCLUDES)
AC_SUBST(KAVSAMBA_LIB_NAME_2X)
AC_SUBST(KAVSAMBA_3_0_0_MODULE_NAME)
AC_SUBST(KAVSAMBA_3_0_2_MODULE_NAME)
AC_SUBST(KAVSAMBA_3_0_4_MODULE_NAME)
AC_SUBST(KAVSAMBA_3_0_11_MODULE_NAME)
AC_SUBST(KAVSAMBA_3_0_20_MODULE_NAME)
AC_SUBST(KAVSAMBA_3_0_20a_MODULE_NAME)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_0)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_2)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_4)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_11)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_20)
AC_SUBST(KAVSAMBA_LIB_NAME_3_0_20a)
AC_OUTPUT(Makefile src/Makefile)

